# raydar

./: .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  wiki.yaml  wiki.yml
docs/wiki/: Build-from-Source.md  Contribute.md  Home.md  Installation.md  Key-Features.md  Local-Development-Setup.md  _Footer.md  _Home.md  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.md  Contribute.md  Local-Development-Setup.md
js/: build.js  build.mjs  package.json  pnpm-lock.yaml
js/src/: index.css  index.html  index.js
js/tools/: build.js  bundle.mjs  css.js  css.mjs  externals.mjs  getarg.js
raydar/: __init__.py
raydar/dashboard/: __init__.py  demo.py  server.py
raydar/dashboard/static/: index.psp2.js
raydar/task_tracker/: __init__.py  schema.py  task_tracker.py
raydar/tests/: conftest.py  test_task_tracker.py
